--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,55 @@
 header {
     background-color: rgb(63, 107, 228);
     box-shadow: 10px 10px 15px lightgrey;
+    border-radius: 25px 0px 0px 25px;
 }
 
 h1 {
     color: white;
-    margin: 2% 2% 2% 1%;
+    margin: 2% 0% 0% 1%;
     font-size: 7vh;
-    padding: 2% 2%;
+    padding: 2% 0%;
 }
 
 ul {
     list-style: none;
+    margin: 0.3% 0% 0.3% 0%;
+    
 }
 
 li {
     animation: pulse 1s;
+    background-color: rgb(218, 218, 218);
+    padding: 0.5%;
+    text-align: left;
+    margin: 0% 0% 0% 2%;
+    
+    
+}
+
+span {
+    padding: 1% 1% 1% 1%;
+    
+    text-align: right;
+}
+
+/* div {
+    margin: 1% 1% 2% 1%;
+} */
+
+.banner {
+    background-color: rgb(63, 107, 228);
+    color: white;
+    margin: 0% 0% 0% 4%;
+    padding: 0.75%;
+    border-radius: 10px 0px 0px 0px;
+    animation: pulse 1s;
+}
+
+.legend {
+    animation: pulse 1s;
+    background-color: rgb(158, 157, 157);
+    color: black;
 }
 
 @keyframes pulse {
@@ -61,6 +95,23 @@ li {
     font-size: 100%;
 }
 
-#resultDiv {
-    margin: 1% 1% 2% 1%;
+/* #resultDiv {
+    margin: 1% 0% 2% 1%;
+} */
+
+#formDiv {
+    margin: 0% 0% 3% 4%;
+    background-color: rgb(218, 218, 218);
+    padding: 1% 2% 0% 1%;
+    border-radius: 0px 0px 0px 25px;
+}
+
+
+span {
+    margin-right: 3%;
+    text-align: center;
+}
+
+input {
+    margin-right: 3%;
 }
