--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ ul {
 }
 
 li {
-    animation: pulse 1s;
+    animation: pulse 1.5s;
     background-color: rgb(218, 218, 218);
     padding: 0.5%;
     text-align: left;
-    margin: 0% 0% 0% 2%;
+    margin: 0% 0% 0.3% 2%;
     
     
 }
@@ -106,6 +106,11 @@ span {
     border-radius: 0px 0px 0px 25px;
 }
 
+.now {
+    background-color: orangered;
+    color: black;
+    padding: 0.6%;
+}
 
 span {
     margin-right: 3%;
