--- a/styles.css
+++ b/styles.css
@@ -27,15 +27,16 @@ li {
     background-color: rgb(218, 218, 218);
     padding: 0.5%;
     text-align: left;
-    margin: 0% 0% 0.3% 2%;
+    margin: 0% 0% 0.3% 0.5%;
     
     
 }
 
 span {
     padding: 1% 1% 1% 1%;
-    
-    text-align: right;
+    margin-right: 7%;
+    /* text-align: center; */
+    /* text-align: right; */
 }
 
 /* div {
@@ -45,7 +46,7 @@ span {
 .banner {
     background-color: rgb(63, 107, 228);
     color: white;
-    margin: 0% 0% 0% 4%;
+    margin: 0% 0% 0% 2.5%;
     padding: 0.75%;
     border-radius: 10px 0px 0px 0px;
     animation: pulse 1s;
@@ -55,6 +56,7 @@ span {
     animation: pulse 1s;
     background-color: rgb(158, 157, 157);
     color: black;
+    font-weight: bold;
 }
 
 @keyframes pulse {
@@ -100,7 +102,7 @@ span {
 } */
 
 #formDiv {
-    margin: 0% 0% 3% 4%;
+    margin: 0% 0% 3% 2.5%;
     background-color: rgb(218, 218, 218);
     padding: 1% 2% 0% 1%;
     border-radius: 0px 0px 0px 25px;
@@ -112,10 +114,6 @@ span {
     padding: 0.6%;
 }
 
-span {
-    margin-right: 3%;
-    text-align: center;
-}
 
 input {
     margin-right: 3%;
